--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@
 .show {
     display: block;
 }
+.fond {
+    position: absolute;
+    opacity: 0.6;
+    width: 100%;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+}
