--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,13 @@
     display: block;
 }
 .fond {
-    position: absolute;
+    position: relative;
+
     opacity: 0.6;
     width: 100%;
+    margin: 0px;
     top: 0px;
     right: 0px;
     bottom: 0px;
+
 }
