-step3-type-citation

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     display: block;
 }
 body {
-    background: url(../img/astier.jpg);
+    background: url(../img/astier.jp);
     background-repeat: no-repeat;
     opacity: 1;
     height: auto;
